[gd_scene load_steps=21 format=3 uid="uid://bcc3egfuhhsp4"]

[ext_resource type="Script" path="res://Assets/Scene/PlanetGame/PlanetGame.gd" id="1_622am"]
[ext_resource type="Texture2D" uid="uid://nsrkl7gj2pjg" path="res://Assets/HDRI/HDR_blue_nebulae-1.hdr" id="2_f30f7"]
[ext_resource type="Script" path="res://addons/orbit_camera/orbit_camera.gd" id="3_op2ny"]
[ext_resource type="Script" path="res://Assets/Scene/PlanetGame/TurnManager.gd" id="5_2l4iw"]
[ext_resource type="PackedScene" uid="uid://dp3sqtl5k5hxc" path="res://Assets/Scene/GUI/CardHandUI/CardHandUI.tscn" id="6_i4q55"]
[ext_resource type="PackedScene" uid="uid://v5ews1ioygl2" path="res://Assets/Scene/GUI/CardElementConfirmation/CardElementConfirmation.tscn" id="7_6xfrc"]
[ext_resource type="PackedScene" uid="uid://b031aswkctq01" path="res://Assets/Scene/GUI/MainCivilizationAssetItem/MainCivilizationAssetItem.tscn" id="8_wn410"]
[ext_resource type="Texture2D" uid="uid://cl8cvvv0sqjue" path="res://Assets/Icon/brick.png" id="9_f21h3"]
[ext_resource type="Texture2D" uid="uid://euoqa6hmc6as" path="res://Assets/Icon/hammer2.png" id="10_b7ik2"]
[ext_resource type="Texture2D" uid="uid://b3rw4bgwrbnvx" path="res://Assets/Icon/apple.png" id="11_47xl2"]
[ext_resource type="Texture2D" uid="uid://bhjy6ew5af725" path="res://Assets/Icon/science.png" id="12_snyxe"]
[ext_resource type="Texture2D" uid="uid://cdui5gm8eme13" path="res://Assets/Icon/sand_clock.png" id="12_vrsxr"]
[ext_resource type="PackedScene" uid="uid://e2c8b7ihtlw1" path="res://Assets/Scene/TerritoryDisplayer/TerritoryDisplayer.tscn" id="13_bqsqm"]
[ext_resource type="PackedScene" uid="uid://cqup31alfnid" path="res://Assets/Scene/GUI/TerrainSelectionMenu/TerrainSelectionMenu.tscn" id="13_rbcag"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_0gvg1"]
panorama = ExtResource("2_f30f7")
filter = false

[sub_resource type="Sky" id="Sky_yjtrl"]
sky_material = SubResource("PanoramaSkyMaterial_0gvg1")

[sub_resource type="Environment" id="Environment_bydhr"]
background_mode = 2
sky = SubResource("Sky_yjtrl")
ambient_light_source = 3
ambient_light_color = Color(0.258824, 0.490196, 0.607843, 1)
ambient_light_sky_contribution = 0.1
ambient_light_energy = 0.1
ssao_enabled = true
sdfgi_enabled = true
glow_enabled = true
glow_intensity = 1.4
glow_strength = 1.2
glow_blend_mode = 1
volumetric_fog_enabled = true
volumetric_fog_density = 0.02
volumetric_fog_albedo = Color(0.682353, 0.482353, 0.313726, 1)
volumetric_fog_gi_inject = 16.0
volumetric_fog_anisotropy = 0.6
volumetric_fog_sky_affect = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5g3dh"]
albedo_color = Color(0.945098, 0.45098, 0.12549, 1)
emission_enabled = true
emission = Color(0.937255, 0.678431, 0.376471, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ehdg2"]

[sub_resource type="VoxelGIData" id="VoxelGIData_7q56f"]
_data = {
"bounds": AABB(-12.5, -12.5, -12.5, 25, 25, 25),
"level_counts": PackedInt32Array(1, 0, 0, 0, 0, 0, 0, 0),
"octree_cells": PackedByteArray(255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255),
"octree_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"octree_df_png": PackedByteArray(137, 80, 78, 71, 13, 10, 26, 10, 0, 0, 0, 13, 73, 72, 68, 82, 0, 0, 64, 0, 0, 0, 0, 128, 8, 0, 0, 0, 0, 214, 24, 46, 249, 0, 0, 0, 1, 115, 82, 71, 66, 0, 174, 206, 28, 233, 0, 0, 9, 90, 73, 68, 65, 84, 120, 156, 237, 220, 49, 1, 0, 32, 12, 192, 48, 192, 191, 231, 33, 99, 61, 18, 5, 85, 208, 59, 7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 246, 182, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 72, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 128, 15, 143, 46, 1, 255, 27, 136, 218, 219, 0, 0, 0, 0, 73, 69, 78, 68, 174, 66, 96, 130),
"octree_size": Vector3(128, 128, 128),
"to_cell_xform": Transform3D(5.12, 0, 0, 0, 5.12, 0, 0, 0, 5.12, 64, 64, 64)
}

[node name="PlanetGame" type="Node3D"]
script = ExtResource("1_622am")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bydhr")

[node name="Sun" type="MeshInstance3D" parent="."]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, -100, 100, 100)
material_override = SubResource("StandardMaterial3D_5g3dh")
cast_shadow = 0
mesh = SubResource("SphereMesh_ehdg2")

[node name="VoxelGI" type="VoxelGI" parent="."]
size = Vector3(25, 25, 25)
data = SubResource("VoxelGIData_7q56f")

[node name="LightmapProbe" type="LightmapProbe" parent="VoxelGI"]
visible = false

[node name="CameraOrigin" type="Node3D" parent="."]

[node name="OrbitCamera" type="Camera3D" parent="CameraOrigin"]
script = ExtResource("3_op2ny")
SCROLL_SPEED = 100.0
ROTATE_SPEED = 0.4
ANCHOR_NODE_PATH = NodePath("..")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, 0, 0, 0)
light_volumetric_fog_energy = 0.2
light_cull_mask = 4293918721
shadow_enabled = true

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.707107, 0.5, 0.5, 0, 0.707107, -0.707107, -0.707107, -0.5, -0.5, 0, 0, 0)
light_color = Color(0.196078, 0.329412, 0.447059, 1)
light_energy = 0.1
light_cull_mask = 4293918721

[node name="TurnManager" type="Node3D" parent="."]
script = ExtResource("5_2l4iw")
planet_game_node_path = NodePath("..")

[node name="TerritoryDisplayer" parent="." instance=ExtResource("13_bqsqm")]

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardHandUI" parent="GUI" instance=ExtResource("6_i4q55")]
layout_mode = 1

[node name="CardElementConfirmation" parent="GUI" instance=ExtResource("7_6xfrc")]
visible = false
layout_mode = 0
offset_right = 200.0
offset_bottom = 89.0

[node name="TerrainSelectionMenu" parent="GUI" instance=ExtResource("13_rbcag")]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 187.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="GUI/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GUI/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 3

[node name="ListCivilizationAssetItem" type="HBoxContainer" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem"]
layout_mode = 2

[node name="MainCivilizationAssetItem" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer" instance=ExtResource("8_wn410")]
layout_mode = 2
asset_id = "@asset::building_material"

[node name="ButtonAddBuildingMaterial" type="Button" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer"]
custom_minimum_size = Vector2(120, 55)
layout_mode = 2
text = "增加"
icon = ExtResource("9_f21h3")
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem"]
layout_mode = 2

[node name="MainCivilizationAssetItem2" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer2" instance=ExtResource("8_wn410")]
layout_mode = 2
asset_id = "@asset::labor_force"

[node name="ButtonAddLaborForce" type="Button" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer2"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
text = "增加"
icon = ExtResource("10_b7ik2")
expand_icon = true

[node name="VBoxContainer3" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem"]
layout_mode = 2

[node name="MainCivilizationAssetItem3" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer3" instance=ExtResource("8_wn410")]
layout_mode = 2
asset_id = "@asset::food"

[node name="ButtonAddFood" type="Button" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer3"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
text = "增加"
icon = ExtResource("11_47xl2")
expand_icon = true

[node name="VBoxContainer4" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem"]
layout_mode = 2

[node name="MainCivilizationAssetItem4" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer4" instance=ExtResource("8_wn410")]
layout_mode = 2
asset_id = "@asset::research_point"

[node name="ButtonAddResearchPoint" type="Button" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer4"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
text = "增加"
icon = ExtResource("12_snyxe")
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "@str::turn"

[node name="TextureRect" type="TextureRect" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
texture = ExtResource("12_vrsxr")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/MarginContainer/HBoxContainer"]
layout_mode = 2
text = " : "

[node name="LabelTurnCount" type="Label" parent="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "999"

[node name="ButtonEndPlayerTurn" type="Button" parent="GUI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_horizontal = 8
text = "@str::end_player_turn"

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 144.0
grow_vertical = 0

[node name="CheckButtonCivilizationTerritory" type="CheckButton" parent="GUI/VBoxContainer2"]
layout_mode = 2
text = "显示文明边疆"

[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer/ButtonAddBuildingMaterial" to="." method="_on_button_add_building_material_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer2/ButtonAddLaborForce" to="." method="_on_button_add_labor_force_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer3/ButtonAddFood" to="." method="_on_button_add_food_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/ListCivilizationAssetItem/VBoxContainer4/ButtonAddResearchPoint" to="." method="_on_button_add_research_point_pressed"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/ButtonEndPlayerTurn" to="." method="_on_button_end_player_turn_pressed"]
[connection signal="toggled" from="GUI/VBoxContainer2/CheckButtonCivilizationTerritory" to="." method="_on_check_button_civilization_territory_toggled"]
